Disable preview features and update some dependencies